--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
+    "aws-sdk": "^2.1676.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "dayjs": "^1.11.13",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.6.1",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "firebase-admin": "^13.0.2",
@@ -30,12 +31,9 @@
     "pg": "^8.13.1",
     "socket.io": "^4.8.1",
     "uuid": "^9.0.1",
-    "winston": "^3.13.1",
-    "aws-sdk": "^2.1676.0"
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
-
-
